@@ -70,7 +70,7 @@
 
 #define USERSIZE 128
 
-#define BINDVARLENGTH 30
+#define BINDVARLENGTH 64
 #define MAXVAR 256
 
 #define MAXCONNECTIONIDLEN 1024
