@@ -2,6 +2,8 @@
 	updated configure script to look for client64 in addition to client
 		for oracle intantclient on x86_64
 	added setTimeout to all API's
+	applied some patches from Alexey Leontev
+	bumped BINDVARLENGTH up to 64
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
